# rusty-X-Clone

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk-release.toml  Trunk-release.win.toml  Trunk.toml  Trunk.win.toml
backend/crypto/: Cargo.toml
backend/crypto/src/: password.rs
backend/query/: Cargo.toml
backend/query/src/: lib.rs  post.rs  schema.rs  session.rs  test_db.rs  user.rs  util.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  extractor.rs  handler.rs  lib.rs  logging.rs  router.rs
backend/server/src/handler/: post.rs  user.rs
frontend/: Cargo.toml  Dioxus.toml  index.html  input.css  package-lock.json  package.json
frontend/assets/: tailwind.css
frontend/src/: app.rs  elements.rs  icon.rs  main.rs  page.rs  util.rs
frontend/src/elements/: appbar.rs  keyed_notifications_box.rs  local_profile.rs  navbar.rs  post.rs  sidebar.rs  toaster.rs
frontend/src/elements/post/: actionbar.rs  content.rs  quick_response.rs
frontend/src/page/: edit_profile.rs  home.rs  login.rs  new_post.rs  not_found.rs  register.rs  trending.rs  view_profile.rs
frontend/src/page/home/: bookmarked.rs  liked.rs
frontend/src/page/new_post/: chat.rs  image.rs  poll.rs
frontend/src/util/: api_client.rs  cookie.rs
shared/cookie/src/: lib.rs
shared/domain/: Cargo.toml
shared/domain/src/: id.rs  lib.rs  post.rs  user.rs
shared/endpoint/: Cargo.toml
shared/endpoint/src/: lib.rs  post.rs  user.rs
shared/endpoint/src/post/: endpoint.rs  types.rs
shared/endpoint/src/user/: endpoint.rs  types.rs
tools/project-init/src/: main.rs
