[package]
name = "front"
version = "0.1.0"
authors = ["Khuu Viet Sang <sangkhuudev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.1", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
chrono = { version = "0.4.26", features = ["serde"] }
console_log = { version = "1.0", optional = true, features = ["color"] }

fermi = "0.4.3"
futures = "0.3.28"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
indexmap = "2.0.0"
itertools = "0.13.0"
js-sys = "0.3.64"
load-dotenv = "0.1.2"

once_cell = "1.18.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
thiserror = "1.0.61"
url = "2.4.0"
web-sys = { version = "0.3.64", features = [
    "Blob",
    "Document",
    "File",
    "FileList",
    "History",
    "HtmlDocument",
    "HtmlInputElement",
    "Location",
    "Window",
] }
wasm-bindgen = "0.2.92"

# needed to build docs (bug in interprocess crate transitive dependency)
interprocess = { version = "1.2.1", features = ["tokio"], optional = true }

uchat_cookie = { path = "../shared/cookie" }

[features]
default = ["console_log"]
docbuild = ["interprocess"]
