[package]
name = "uchat_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
nutype = { version = "0.4.2", features = ["serde", "regex"] }
once_cell = "1.19.0"
regex = "1.10.5"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.61"
uuid = { version = "1.9.1", features = ["v4", "serde", "js"] }

# backend
diesel-derive-newtype = { version = "2.1.0", optional = true }

[dependencies.diesel]
version = "2.1.0"
features = [
  "postgres",
  "uuid",
  "chrono",
  "serde_json",
  "postgres_backend",
  "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
]
default-features = false
optional = true

[features]
query = ["dep:diesel", "dep:diesel-derive-newtype"]